# dashcam-crawler

./: .gitignore  AGENTS.md  Makefile  README.md  dashcam-crawler-restart.path  dashcam-crawler-restart.service  dashcam-crawler.service  fitcamx-crawler.conf  fitcamx-crawler.service  install.sh  main.py  pyproject.toml  requirements.txt  setup_venv.sh  wpa_supplicant.conf.example
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-app.yml  release.yml
crawler/: debug.py  main.py  network.py  videolocalstorage.py  videorecord.py  videoregister.py
crawler/destination/: GoogleCloudStorage.py  Sftp.py  __init__.py
crawler/source/: fitcamx.py
debian/: changelog  control  dashcam-crawler-restart.service  dashcam-crawler.service  dashcam-crawler.wrapper  postinst  postrm  prerm  rules
fitcamx-response-examples/: curl-fitcamx-cardv.txt  curl-fitcamx-root.txt  curl-fitcamx.txt
systemd/: fitcamx-crawler.service
tests/: test_destination.py  test_fitcamx.py  test_videolocalstorage.py  test_videoregister.py
